Incorporated meta-analysis and Sn-Sp tradeoff from meta-analysis into simulations. Some scripts added to old file just to keep track, but will be removed for later commit.

--- a/docs/manuscript/lexces-silicosis-predict.bib
+++ b/docs/manuscript/lexces-silicosis-predict.bib
@@ -11,7 +11,8 @@ pages = {595--601},
 pmid = {17409183},
 title = {{A simple diagnostic model for ruling out pneumoconiosis among construction workers}},
 volume = {64},
-year = {2007}
+year = {2007},
+url = 
 }
 @book{ILO2022,
 abstract = {Scope of the Classification The Classification provides a means for describing and recording systematically the radiographic abnormalities in the chest provoked by the inhalation of dusts. It is used to describe radiographic abnormalities that occur in any type of pneumoconiosis and is designed for classifying only the appearances seen on postero-anterior chest radiographs. Other views and imaging techniques may be required for clinical assessment of individuals, but the ILO International Classification has not been designed to code such findings.},
@@ -59,13 +60,13 @@ doi = {10.1002/sim.7260},
 issn = {10970258},
 journal = {Statistics in Medicine},
 keywords = {ROC analysis,electronic health records,misclassification,precision medicine,risk prediction modeling},
-mendeley-groups = {Lexces/Silicosis},
 number = {13},
 pages = {2148--2160},
 pmid = {28245528},
 title = {{Corrected ROC analysis for misclassified binary outcomes}},
 volume = {36},
-year = {2017}
+year = {2017},
+url = {https://onlinelibrary.wiley.com/doi/full/10.1002/sim.7260}
 }
 @article{Meijer2011,
 abstract = {Objectives: To evaluate the prevalence of HRCT findings in construction workers previously surveyed by chest radiographs classified according to ILO guidelines. To examine the association between HRCT findings and exposure to quartz containing dust, and lung function. Methods: The study comprised a questionnaire, dynamic and static lung function measurements, single-breath CO diffusion capacity, chest radiographs and HRCT in 79 individuals. Certified 'B' readers coded radiographs according to the ILO classification. HRCT scans were read according to an international classification system. A qualitative exposure index for cumulative respiratory quartz on a 10-point scale was used. Results: Agreement between HRCT readers was good ($\kappa${\textgreater}0.60), except for irregular opacities ($\kappa$=0.23). In ILO category 0/0, 8{\%} HRCT round, 22{\%} irregular and/or linear opacities and 41{\%} HRCT emphysema was found. HRCT round opacities was associated with high cumulative quartz exposure (OR 7.1; 95{\%} CI 1.3 to 37.8). Emphysema was associated with smoking (OR 10.1; 95{\%} CI 1.2 to 84.2) and showed a reduction in TL,CO,sb. HRCT round opacities was not associated with lung function. Current smoking was negatively associated with FEV1/FVC ratio and positively with RV/TLC ratio, and showed a reduction in TL,CO,sb (13.4{\%}), adjusted for different HRCT findings. Conclusions: Low grade silicosis cannot be excluded in workers with normal chest radiographs (ILO 0/0). In relatively highly exposed construction workers, a sevenfold increased risk of simple (nodular) silicosis was found. Emphysema on HRCT was associated with current or former smokers, but not with exposure, and contributed to reduced diffusion capacity. Airflow limitation was mainly determined by current smoking and was not associated with simple (nodular) silicosis.},
@@ -155,3 +156,121 @@ volume = {48},
 year = {2016}
 }
 
+@software{MancillaRepository2024,
+author = {Mancilla Galindo, Javier and Portengen, Lutzen and Peters, Susan},
+license = {MIT},
+month = sep,
+title = {{Evaluation of a silicosis diagostic prediction rule}},
+url = {https://github.com/UtrechtUniversity/lexces-silicosis-predict},
+version = {1.0.0},
+year = {2024}
+}
+
+@article{OSullivan2018,
+  title = {Verification Bias},
+  author = {O'Sullivan, Jack W and Banerjee, Amitava and Heneghan, Carl and Pluddemann, Annette},
+  year = {2018},
+  month = apr,
+  journal = {BMJ Evidence-Based Medicine},
+  volume = {23},
+  number = {2},
+  pages = {54--55},
+  issn = {2515-446X, 2515-4478},
+  doi = {10.1136/bmjebm-2018-110919},
+  url = {https://ebm.bmj.com/content/23/2/54},
+  urldate = {2024-11-29},
+  abstract = {This article is part of the Catalogue of Bias series. We present a description of verification bias, and outline its potential impact on research studies and the preventive steps to minimise its risk. We also present teaching slides in the online supplementary file. Verification bias (sometimes referred to as `work-up bias') concerns the test(s) used to confirm a diagnosis within a diagnostic accuracy study. Verification bias occurs when only a proportion of the study participants receive confirmation of the diagnosis by the reference standard test, or if some participants receive a different reference standard test.},
+  langid = {english}
+}
+
+@article{Franco2016,
+  title = {Evaluation of Diagnostic Tests in Parallel and in Series},
+  author = {Franco, Francesco and Di Napoli, Anteo},
+  year = {2016},
+  month = jul,
+  journal = {Giornale di Tecniche Nefrologiche e Dialitiche},
+  volume = {28},
+  number = {3},
+  pages = {212--215},
+  issn = {0394-9362, 1724-5974},
+  doi = {10.5301/GTND.2016.15992},
+  url = {https://journals.sagepub.com/doi/abs/10.5301/GTND.2016.15992},
+  urldate = {2024-11-29},
+  langid = {english}
+}
+
+@article{Luijken2024,
+  title = {Risk-{{Based Decision Making}}: {{Estimands}} for {{Sequential Prediction Under Interventions}}},
+  shorttitle = {Risk-{{Based Decision Making}}},
+  author = {Luijken, Kim and Morzywo{\l}ek, Pawe{\l} and Van Amsterdam, Wouter and Cin{\`a}, Giovanni and Hoogland, Jeroen and Keogh, Ruth and Krijthe, Jesse H. and Magliacane, Sara and Van Ommen, Thijs and Peek, Niels and Putter, Hein and Van Smeden, Maarten and Sperrin, Matthew and Wang, Junfeng and Weir, Daniala L. and Didelez, Vanessa and Van Geloven, Nan},
+  year = {2024},
+  month = dec,
+  journal = {Biometrical Journal},
+  volume = {66},
+  number = {8},
+  pages = {e70011},
+  issn = {0323-3847, 1521-4036},
+  doi = {10.1002/bimj.70011},
+  urldate = {2024-11-29},
+  abstract = {ABSTRACT             Prediction models are used among others to inform medical decisions on interventions. Typically, individuals with high risks of adverse outcomes are advised to undergo an intervention while those at low risk are advised to refrain from it. Standard prediction models do not always provide risks that are relevant to inform such decisions: for example, an individual may be estimated to be at low risk because similar individuals in the past received an intervention which lowered their risk. Therefore, prediction models supporting decisions should target risks belonging to defined intervention strategies. Previous works on prediction under interventions assumed that the prediction model was used only at one time point to make an intervention decision. In clinical practice, intervention decisions are rarely made only once: they might be repeated, deferred, and reevaluated. This requires estimated risks under interventions that can be reconsidered at several potential decision moments. In the current work, we highlight key considerations for formulating estimands in sequential prediction under interventions that can inform such intervention decisions. We illustrate these considerations by giving examples of estimands for a case study about choosing between vaginal delivery and cesarean section~for women giving birth. Our formalization of prediction tasks in a sequential, causal, and estimand context provides guidance for future studies to ensure that the right question is answered and appropriate causal estimation approaches are chosen to develop sequential prediction models that can inform intervention~decisions.},
+  langid = {english}
+}
+
+@inproceedings{Durairaj2024,
+  title = {S17 {{The}} Diagnostic Accuracy of Chest {{X-ray}} for the Diagnosis of Silicosis and How This Relates to Silica Exposure},
+  booktitle = {`{{Lungs Labours Lost}}' -- {{Occupational}} Lung Disease},
+  author = {Durairaj, A and Howlett, P and Feary, J},
+  year = {2024},
+  month = nov,
+  pages = {A19.2-A20},
+  publisher = {{BMJ Publishing Group Ltd and British Thoracic Society}},
+  doi = {10.1136/thorax-2024-BTSabstracts.23},
+  urldate = {2025-01-23},
+  url = {https://thorax.bmj.com/content/79/Suppl_2/A19.2},
+}
+@article{Efthimiou2024,
+  title = {Developing Clinical Prediction Models: A Step-by-Step Guide},
+  shorttitle = {Developing Clinical Prediction Models},
+  author = {Efthimiou, Orestis and Seo, Michael and Chalkou, Konstantina and Debray, Thomas and Egger, Matthias and Salanti, Georgia},
+  year = {2024},
+  month = sep,
+  journal = {BMJ},
+  pages = {e078276},
+  publisher = {BMJ},
+  issn = {1756-1833},
+  doi = {10.1136/bmj-2023-078276},
+  urldate = {2025-01-14},
+  copyright = {http://creativecommons.org/licenses/by/4.0/},
+  langid = {english},
+  url = {https://www.bmj.com/content/386/bmj-2023-078276},
+}
+@article{Tamura2015,
+  title = {Relationships ({{I}}) of {{International Classification}} of {{High-resolution Computed Tomography}} for {{Occupational}} and {{Environmental Respiratory Diseases}} with the {{ILO International Classification}} of {{Radiographs}} of {{Pneumoconioses}} for Parenchymal Abnormalities},
+  author = {Tamura, Taro and Suganuma, Narufumi and Hering, Kurt G. and Vehmas, Tapio and Itoh, Harumi and Akira, Masanori and Takashima, Yoshihiro and Hirano, Harukazu and Kusaka, Yukinori},
+  year = {2015},
+  journal = {Industrial Health},
+  volume = {53},
+  number = {3},
+  pages = {260--270},
+  issn = {0019-8366, 1880-8026},
+  doi = {10.2486/indhealth.2014-0073},
+  urldate = {2025-02-14},
+  langid = {english}
+}
+@article{Murgia2007,
+  title = {An Old Threat in a New Setting: {{High}} Prevalence of Silicosis among Jewelry Workers},
+  shorttitle = {An Old Threat in a New Setting},
+  author = {Murgia, Nicola and Muzi, Giacomo and family=Omo, given=Marco, prefix=dell', useprefix=true and Sallese, Domenico and Ciccotosto, Cesario and Rossi, Margherita and Scatolini, Paola and Zingarelli, Alberto and Accattoli, Maria Patrizia and Melchiorri, Daniela and Abbritti, Giuseppe},
+  date = {2007-08},
+  journaltitle = {American Journal of Industrial Medicine},
+  shortjournal = {American J Industrial Med},
+  volume = {50},
+  number = {8},
+  pages = {577--583},
+  issn = {0271-3586, 1097-0274},
+  doi = {10.1002/ajim.20490},
+  url = {https://onlinelibrary.wiley.com/doi/10.1002/ajim.20490},
+  urldate = {2025-02-14},
+  abstract = {Abstract                            Background               Silicosis is caused by inhaling free crystalline silica. Few case reports have addressed the risk of silicosis in the jewelry trade where chalk molds containing a high percentage of silica are used in casting. We conducted a cross‐sectional study involving 100 goldsmiths exposed to silica.                                         Methods               All workers replied to a questionnaire and underwent a clinical examination, pulmonary function tests, a chest X‐ray and a high‐resolution CT scan.                                         Results               High‐resolution CT visualized signs of silicosis in 23 cases, confirmed by standard chest X‐rays in 10. In the 23 workers with CT evidence of silicosis Total Lung Capacity, FEV1 and the Lung Diffusing Capacity did not differ from the workers without the disease. Pulmonary function tests did not correlate with silica exposure.                                         Conclusion               In this study we demonstrate that use of chalk molds in casting in jewelry causes silicosis. The composition of the dust could be responsible of the high prevalence observed. Am. J. Ind. Med. 50:577–583, 2007. © 2007 Wiley‐Liss, Inc.},
+  langid = {english}
+}
